--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
         <title>
           Demo UI
         </title>
+        <script type="text/javascript" src="cool.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
 
     <body>
+        
         <h1>Demo page for git purpose</h1>
-        <button lass='btn-success'>Click</button>
+    
+        <button id="button1" class='btn-success'>Click</button>
+        <p id="output"></p>
     </body>
 
   
